--- a/djangointerfacetestplatform/templates/index.html
+++ b/djangointerfacetestplatform/templates/index.html
@@ -1,1 +1,61 @@
 {% extends "base.html" %}
+
+{% block breadcrumb %}
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'app01:index' %}">首页</a></li>
+        <li class="breadcrumb-item active">项目列表</li>
+    </ol>
+{% endblock %}
+
+<!--如果项目表有数据，就展示-->
+
+{% block content %}
+    {% if it_obj %}
+        <div class="card card-primary card-outline">
+            <div class="col-xs-pull-1">
+                <a href="{% url "app01:add_it" %}" class="btn btn-sm btn-primary">添加项目</a>
+            </div>
+            <table class="table table-striped table-hover table-bordered">
+                <thead style="text-align: center">
+                <tr>
+                    <th>序号</th>
+                    <th>名称</th>
+                    <th>描述</th>
+                    <th>开始时间</th>
+                    <th>结束时间</th>
+                    <th>用例数量</th>
+                    <th>覆盖率</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for foo in it_obj %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ foo.it_name }}</td>
+                        <td>{{ foo.it_desc }}</td>
+                        <td>{{ foo.it_start_time }}</td>
+                        <td>{{ foo.it_end_time }}</td>
+                        <td>{{ foo.api_set.count }}</td>
+                        <!--用例通过的数量除以总用例数量-->
+                        <td>{{ foo.fraction_of_coverage }}</td>
+                        <td>
+                            <a href="#" class="btn btn-danger btn-sm">删除</a>
+                            <a href="" class="btn btn-info btn-sm">编辑</a>
+                            <a href="" class="btn btn-warning btn-sm">添加用例</a>
+                            <a href="" class="btn btn-default btn-sm">批量导入</a>
+                            <a href="" class="btn btn-success btn-sm">查看用例</a>
+                        </td>
+                    </tr>
+
+                {% endfor %}
+                </tbody>
+
+            </table>
+
+        </div>
+    {% else %}
+        <p>没有数据，去<a href="">创建项目</a></p>
+    {% endif %}
+
+{% endblock %}
