--- a/djangointerfacetestplatform/templates/index.html
+++ b/djangointerfacetestplatform/templates/index.html
@@ -41,10 +41,10 @@
                         <td>{{ foo.fraction_of_coverage }}</td>
                         <td>
                             <a href="{% url "app01:delete_it" foo.pk %}" class="btn btn-danger btn-sm">删除</a>
-                            <a href="" class="btn btn-info btn-sm">编辑</a>
+                            <a href="{% url "app01:edit_it" foo.pk %}" class="btn btn-info btn-sm">编辑</a>
                             <a href="" class="btn btn-warning btn-sm">添加用例</a>
-                            <a href="" class="btn btn-default btn-sm">批量导入</a>
-                            <a href="" class="btn btn-success btn-sm">查看用例</a>
+                            <a href="{% url "app01:upload" foo.pk %}" class="btn btn-default btn-sm">批量导入</a>
+                            <a href="{% url "app01:list_api" foo.pk %}" class="btn btn-success btn-sm">查看用例</a>
                         </td>
                     </tr>
 
