--- a/djangointerfacetestplatform/templates/base.html
+++ b/djangointerfacetestplatform/templates/base.html
@@ -180,7 +180,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'app01:index' %}" class="nav-link">
+                        <a href="{% url 'app01:logs_list' %}" class="nav-link">
                             <i class="nav-icon far fa-calendar-alt"></i>
                             <p>
                                 log日志
