新增可视化和发送邮件功能，目前第一阶段已开发完成

--- a/djangointerfacetestplatform/templates/base.html
+++ b/djangointerfacetestplatform/templates/base.html
@@ -189,7 +189,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </li>
 
                     <li class="nav-item">
-                        <a href="{% url 'app01:index' %}" class="nav-link">
+                        <a href="{% url 'app01:show_tab' %}" class="nav-link">
                             <i class="nav-icon far fa-image"></i>
                             <p>
                                 可视化图表
