--- a/djangointerfacetestplatform/templates/list_api.html
+++ b/djangointerfacetestplatform/templates/list_api.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block form %}
+
+{% endblock %}
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
