--- a/djangointerfacetestplatform/templates/preview.html
+++ b/djangointerfacetestplatform/templates/preview.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="card card-primary">
         <div class="card-header">
-            <h3 class="card-title">[{{ log_obj.log_sub_it.it_name }}]的记录报告</h3>
+            <h3 style="font-size:18px ;margin-bottom:-16px;">[{{ log_obj.log_sub_it.it_name }}]的记录报告</h3>
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
                     <i class="fas fa-minus"></i>
